--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li>open history in new tab</li>
 		<li>integrate extend</li>
 		<li>publish history/extend demo</li>
+		<li>buy a present for Maja</li>
 	</ul>
 </body>
 </html>
