changed item with stupidity

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div>My todo list:</div>
 	<ul>
 		<li>open history in new tab</li>
-		<li>integrate extend</li>
+		<li>integrate extend with history</li>
 		<li>publish history/extend demo</li>
 		<li>buy a present for Maja</li>
 	</ul>
