created a second list

--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
 		<li>publish history/extend demo</li>
 		<li>buy a present for Maja</li>
 	</ul>
+	
+	<div>My another list</div>
+	<ul>
+		<li>one</li>
+		<li>two</li>
+		<li>three</li>
+	</ul>
 </body>
 </html>
